despatma-visitor/tests/fail/helper_tmpl_syntax_error.stderr
error[E0599]: no method named `visit_rectangle` found for mutable reference `&mut V` in the current scope
  --> tests/fail/helper_tmpl_syntax_error.rs:13:30
   |
13 |     #[helper_tmpl = {visitor.visit_rectangle(cube.get_back())}]
   |                              ^^^^^^^^^^^^^^^
   |
help: there is a method `visit_circle` with a similar name
   |
13 -     #[helper_tmpl = {visitor.visit_rectangle(cube.get_back())}]
13 +     #[helper_tmpl = {visitor.visit_circle(cube.get_back())}]
   |

error[E0599]: no method named `get_back` found for reference `&dyn Cube` in the current scope
  --> tests/fail/helper_tmpl_syntax_error.rs:13:51
   |
13 |     #[helper_tmpl = {visitor.visit_rectangle(cube.get_back())}]
   |                                                   ^^^^^^^^ method not found in `&dyn Cube`
